--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,12 @@ android {
         }
     }
     signingConfigs {
+        release {
+            keyAlias 'keyAlias'
+            keyPassword 'qburst'
+            storeFile file('../keystores/appCenter-keystore.jks')
+            storePassword 'qburst'
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
